# flow-proxy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONFIG.md  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SECRETS_TEMPLATE.md  docker-compose.yml  pyproject.toml  secrets.json.template
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: bump-version.yml  release.yml  test.yml
.kiro/settings/: mcp.json
.kiro/specs/flow-proxy-plugin/: design.md  requirements.md  tasks.md
docs/: Docker部署指南.md  LoadBalancer修复说明.md  flow-llm-proxy.html  log-cleanup.md  log-filtering.md  refactoring-summary.md  使用指南.md  开发指南.md  部署运维.md
docs/plans/: design.md  requirements.md
docs/superpowers/plans/: 2026-03-11-sse-streaming-httpx.md  2026-03-12-log-grouping.md  2026-03-12-performance-optimization.md  2026-03-12-sse-streaming-optimization.md  2026-03-13-async-streaming.md  2026-03-14-sse-error-notification.md  2026-03-14-streaming-robustness-fixes.md  2026-03-15-structured-logging.md  2026-03-15-transport-error-classification.md
docs/superpowers/specs/: 2026-03-11-performance-optimization-design.md  2026-03-11-sse-streaming-httpx-design.md  2026-03-12-log-grouping-design.md  2026-03-12-performance-optimization-design.md  2026-03-12-sse-streaming-optimization-design.md  2026-03-13-async-streaming-design.md  2026-03-13-streaming-robustness-design.md  2026-03-14-sse-error-notification-design.md  2026-03-14-usage-stats-design.md  2026-03-15-structured-logging-design.md  2026-03-15-transport-error-classification-design.md  2026-03-15-usage-stats-part1-usage-parser-pricing-cache-design.md  2026-03-15-usage-stats-part2-usage-stats-design.md  2026-03-15-usage-stats-part3-integration-design.md
flow_proxy_plugin/: __init__.py  cli.py  config.py  error_handler.py  jwt_generator.py  load_balancer.py  network_error_handler.py  plugin.py  request_forwarder.py
flow_proxy_plugin/core/: __init__.py  config.py  jwt_generator.py  load_balancer.py  request_forwarder.py
flow_proxy_plugin/plugins/: __init__.py  base.py  base_plugin.py  proxy_plugin.py  request_filter.py  web_server_plugin.py
flow_proxy_plugin/utils/: __init__.py  log_cleaner.py  log_context.py  log_filter.py  logging.py  plugin_base.py  plugin_pool.py  process_services.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_error_handler.py  test_jwt_generator.py  test_load_balancer.py  test_log_cleaner.py  test_log_context.py  test_log_filter.py  test_logging.py  test_network_error_handler.py  test_plugin.py  test_plugin_pool.py  test_process_services.py  test_request_filter.py  test_request_forwarder.py  test_shared_state.py  test_thread_safety.py  test_web_server_plugin.py
